docs(#539): the zero-to-project flow, and where each skill sits in it
The capabilities all existed and nothing sequenced them, so a user got a
set of tools and had to be their own project manager. This is the order
they run in, with each phase naming what it starts from and the
checkable thing it ends on — not a feeling that it went well.

It records why phase 3 precedes phase 4, because the doubt is worth
answering once: the SRS writes to a backend declared in the manifest,
and the manifest only exists after the setup. #512's prose summary lists
them the other way round; the diagram on #539 is the correct one.

The resume rule is a prohibition rather than a suggestion — never
reconstruct the phase from what was said earlier, run recap.sh — because
a session that "remembers" being at phase 4 while actually at phase 2
writes a specification over an intake that never happened.

sf-srs and sf-workflow now say which phases they carry and point back at
the map, so a user entering mid-flow can find it.

Note on syncing the two copies: `scaffolds/` is in .prettierignore, so
the in-repo copy gets reflowed and the scaffolded one does not. The sync
therefore only holds in one direction — format first, then copy in-repo
over scaffolded. Copying the other way passes the drift guard once and
fails on the next commit, which is exactly what happened here before it
was understood.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>